@@ -23,7 +23,7 @@ public class SessionService {
         if (userSessions.size() == SESSION_LIMIT) {
             userSessions.sort(Comparator.comparing(Session::getLastUsedAt));
 
-            Session leastRecentlyUsedSession = userSessions.getFirst();
+            Session leastRecentlyUsedSession = userSessions.get(0);
             sessionRepository.delete(leastRecentlyUsedSession);
         }
 
